// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Given the TodoButton component should render 1`] = `
<button
  class="default-button additional-class active-button"
>
  button 1
</button>
`;

exports[`Given the TodoButton component should render 2`] = `
<button
  class="default-button additional-class"
  disabled=""
>
  button 2
</button>
`;

exports[`Given the TodoButton component should render 3`] = `
<button
  class="default-button active-button"
>
  button 3
</button>
`;

exports[`Given the TodoButton component should render 4`] = `
<button
  class="default-button active-button"
>
  button 4
</button>
`;
